js file overhauled
code uses object orientated programme

--- a/index.html
+++ b/index.html
@@ -19,37 +19,42 @@
     
     <div class="colour-palette">
    
-        <div class="colour-swatch" data-status="unlocked">
+        <div  id="colour-one" class="colour-swatch" data-status="unlocked">
             <div class="colour-content">
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
+                <button id="colour-one-button" class="icon"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
                 <p class="hex-code">#FFFFFF</p>
             </div>
         </div>
-        <div class="colour-swatch" data-status="unlocked">
+        <div id="colour-two" class="colour-swatch" data-status="unlocked">
             <div class="colour-content">
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
+                <button id="colour-two-button" class="icon"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
                 <p class="hex-code">#FFFFFF</p>
             </div>
         </div>
-        <div class="colour-swatch" data-status="unlocked">
+        <div id="colour-three" class="colour-swatch" data-status="unlocked">
             <div class="colour-content">
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
+                <button id="colour-three-button" class="icon"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
                 <p class="hex-code">#FFFFFF</p>
             </div>
         </div>
-        <div class="colour-swatch" data-status="unlocked">
+        <div id="colour-four" class="colour-swatch" data-status="unlocked">
             <div class="colour-content">
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
+                <button  id="colour-four-button" class="icon"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
                 <p class="hex-code">#FFFFFF</p>
             </div>
         </div>
-        <div class="colour-swatch" data-status="unlocked">
+        <div id="colour-five" class="colour-swatch" data-status="unlocked">
             <div class="colour-content">
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
+                <button  id="colour-five-button" class="icon"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
                 <p class="hex-code">#FFFFFF</p>
             </div>
