refresh button functionality added

--- a/index.html
+++ b/index.html
@@ -16,13 +16,18 @@
     <div class="header"> 
       <button class="start-button">Generate palette</button>
     </div>  
+
+    <div class="header"> 
+        <button class="save-button">Save Palette</button>
+      </div>  
+      
     
     <div class="colour-palette">
    
         <div  id="colour-one" class="colour-swatch" data-status="unlocked">
             <div class="colour-content">
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
-                <button id="colour-one-button" class="icon"><i class="fa-solid fa-arrows-rotate"></i></button>
+                <button class="icon refresh-button"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
                 <p class="hex-code">#FFFFFF</p>
             </div>
@@ -30,7 +35,7 @@
         <div id="colour-two" class="colour-swatch" data-status="unlocked">
             <div class="colour-content">
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
-                <button id="colour-two-button" class="icon"><i class="fa-solid fa-arrows-rotate"></i></button>
+                <button class="icon refresh-button"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
                 <p class="hex-code">#FFFFFF</p>
             </div>
@@ -38,7 +43,7 @@
         <div id="colour-three" class="colour-swatch" data-status="unlocked">
             <div class="colour-content">
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
-                <button id="colour-three-button" class="icon"><i class="fa-solid fa-arrows-rotate"></i></button>
+                <button class="icon refresh-button"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
                 <p class="hex-code">#FFFFFF</p>
             </div>
@@ -46,7 +51,7 @@
         <div id="colour-four" class="colour-swatch" data-status="unlocked">
             <div class="colour-content">
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
-                <button  id="colour-four-button" class="icon"><i class="fa-solid fa-arrows-rotate"></i></button>
+                <button class="icon refresh-button"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
                 <p class="hex-code">#FFFFFF</p>
             </div>
@@ -54,7 +59,7 @@
         <div id="colour-five" class="colour-swatch" data-status="unlocked">
             <div class="colour-content">
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
-                <button  id="colour-five-button" class="icon"><i class="fa-solid fa-arrows-rotate"></i></button>
+                <button class="icon refresh-button"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
                 <p class="hex-code">#FFFFFF</p>
             </div>
