text file export function added
export hex colours to a text file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
           </div>
         <button class="start-button">GENERATE</button>
-        <button class="button" onclick="saveDynamicDataToFile();"><i class="fa-solid fa-file-export"></i></button>
+        <button id="download" class="button"><i class="fa-solid fa-file-export"></i></button>
     </div>  
 
     <div class="colour-palette">
@@ -39,7 +39,7 @@
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
                 <button class="icon refresh-button"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
-                <p class="hex-code">#FFFFFF</p>
+                <p id="colourOne" class="hex-code">#FFFFFF</p>
             </div>
         </div>
         <div id="colour-two" class="colour-swatch" data-status="unlocked">
@@ -47,7 +47,7 @@
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
                 <button class="icon refresh-button"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
-                <p class="hex-code">#FFFFFF</p>
+                <p id="colourTwo" class="hex-code">#FFFFFF</p>
             </div>
         </div>
         <div id="colour-three" class="colour-swatch" data-status="unlocked">
@@ -55,7 +55,7 @@
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
                 <button class="icon refresh-button"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
-                <p class="hex-code">#FFFFFF</p>
+                <p id="colourThree" class="hex-code">#FFFFFF</p>
             </div>
         </div>
         <div id="colour-four" class="colour-swatch" data-status="unlocked">
@@ -63,7 +63,7 @@
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
                 <button class="icon refresh-button"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
-                <p class="hex-code">#FFFFFF</p>
+                <p id="colourFour" class="hex-code">#FFFFFF</p>
             </div>
         </div>
         <div id="colour-five" class="colour-swatch" data-status="unlocked">
@@ -71,7 +71,7 @@
                 <button class="icon lock-button"><i class="fa-solid fa-unlock"></i></button>
                 <button class="icon refresh-button"><i class="fa-solid fa-arrows-rotate"></i></button>
                 <button class="icon copy-icon"><i class="fa-solid fa-copy"></i></button>
-                <p class="hex-code">#FFFFFF</p>
+                <p id="colourFive" class="hex-code">#FFFFFF</p>
             </div>
         </div>
     </div>
