html refs removed

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <button onclick="dropdownMenu()" class="button"><i class="fa-solid fa-gear"></i></button>
             <div id="myDropdown" class="dropdown-content">
               <a href="#">Auto</a>
-              <a href="#base">Monochromatic</a>
-              <a href="#blog">Split Complimentary</a>
-              <a href="#contact">Complimentary</a>
-              <a href="#custom">Tradic</a>
-              <a href="#support">Tetratic</a>
-              <a href="#tools">Analogous Schemes</a>
+              <a href="#">Monochromatic</a>
+              <a href="#">Split Complimentary</a>
+              <a href="#">Complimentary</a>
+              <a href="#">Tradic</a>
+              <a href="#">Tetratic</a>
+              <a href="#">Analogous Schemes</a>
             </div>
           </div>
         <button class="start-button">GENERATE</button>
